--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@tailwindcss/vite": "^4.0.17",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
     "styled-components": "^6.1.16",
     "swiper": "^11.2.6",
+    "tailwindcss": "^4.0.17",
     "vite-plugin-eslint": "^1.8.1"
   },
   "devDependencies": {
